Translate2 - Org/src/objects/Purchase__c.object
<CustomObject>
    <description>Purchase Cuisine</description>
    <fields>
        <fullName>Denpyoukei__c</fullName>
        <inlineHelpText>伝票の合計金額を税抜きにて入力してください。</inlineHelpText>
        <label>計(税抜)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>JinyaRevenue__r.Salesday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>仕入日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JinyaRevenue__c</fullName>
        <inlineHelpText>仕入日を半角数字の８桁で入力してください、たとえば、20110103と！</inlineHelpText>
        <label>仕入日</label>
        <referenceTo>RsvAccount__c</referenceTo>
        <relationshipLabel>仕入[調理]</relationshipLabel>
        <relationshipName>PurchaseG9AK</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PurchaseType__c</fullName>
        <inlineHelpText>仕入のカテゴリ別仕入高を計上のため、必ず入力してください。</inlineHelpText>
        <label>種別</label>
        <picklist>
            <picklistValues>
                <fullName>通常</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ブライダルフェア用</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>研究用</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchasesource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>仕入先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>仕入[調理]</relationshipLabel>
        <relationshipName>PurchaseXVFe</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>仕入[調理]</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Purchase#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>